<resources>
    <string name="app_name">JEXchange Analytics</string>
    <string name="jex_logo">Jex logo</string>
    <string name="search_offers">Search offers</string>
    <string name="pair_trading">Pair Trading</string>
    <string name="staking">Staking</string>
    <string name="portfolio">Portfolio</string>
    <string name="community">Community</string>
    <string name="marketplace">MarketPlace</string>
    <string name="sold">Sold</string>
    <string name="token_image">Token image</string>
    <string name="staking_rewards">Staking Rewards</string>
    <string name="trade_your_token_on">Trade Your Tokens On</string>
    <string name="app_jexchange_io">app.jexchange.io</string>
    <string name="your_address_or_herotag">Your address or herotag</string>
    <string name="check">CHECK</string>
    <string name="herotag">herotag</string>
    <string name="dollar_sign">$</string>
    <string name="background_logo">Background logo</string>
    <string name="token">Token</string>
    <string name="token_logo">Token Logo</string>
    <string name="chart">Chart</string>
    <string name="statistics">Statistics</string>
    <string name="account_holders">Account holders</string>
    <string name="transactions">Transactions</string>
    <string name="marketcap">Marketcap</string>
    <string name="supply">Supply</string>
    <string name="circulating_supply">Circulating Supply</string>
    <string name="properties">Properties</string>
    <string name="owner">Owner</string>
    <string name="is_paused">is Paused</string>
    <string name="can_upgrade">can Upgrade</string>
    <string name="can_mint">can Mint</string>
    <string name="can_burn">can Burn</string>
    <string name="can_change_owner">can Change Owner</string>
    <string name="can_pause">can Pause</string>
    <string name="can_freeze">can Freeze</string>
    <string name="can_wipe">can Wipe</string>
    <string name="links">Links</string>
    <string name="total_balance">Total Balance</string>
    <string name="jex_staking_balance">JEX Balance</string>
    <string name="staking_jex">Staking JEX</string>
    <string name="staking_multiversx">Staking MultiversX</string>
</resources>